--- a/otherfood.html
+++ b/otherfood.html
@@ -173,7 +173,8 @@
             { word: "Soup", translation: "Suppi", testTranslations: ["Suppi"], image: "https://i.imgur.com/lkySN45.png", link: "https://example.com/lion" },	
             { word: "Mustard", translation: "Senef", testTranslations: ["Senef"], image: "https://i.imgur.com/FohmnPI.png", link: "https://example.com/dog" },
             { word: "Chips", translation: "Gipes", testTranslations: ["Gipes"], image: "https://i.imgur.com/4IkZ3wj.png", link: "https://example.com/elephant" },
-            { word: "Popcorn", translation: "Fohm", testTranslations: ["Fohm"], image: "https://i.imgur.com/Jf8y2Fm.png", link: "https://example.com/lion" },			
+            { word: "Popcorn", translation: "Fohm", testTranslations: ["Fohm"], image: "https://i.imgur.com/Jf8y2Fm.png", link: "https://example.com/lion" },	
+            { word: "Chocolate Cream", translation: "Hübi", testTranslations: ["Hübi"], image: "https://i.imgur.com/F85WfIq.png", link: "https://example.com/lion" },			
             { word: "Poultry", translation: "Mortes Tramm", testTranslations: ["Mortes Tramm"], image: "https://i.imgur.com/oSzk56T.png", link: "https://example.com/lion" }
 
         ];
