--- a/otherfood.html
+++ b/otherfood.html
@@ -169,7 +169,7 @@
             { word: "Pork", translation: "Pigges Tramm", testTranslations: ["Pigges Tramm"], image: "https://i.imgur.com/v0i0nRt.png", link: "https://example.com/dog" },
             { word: "Beef", translation: "Gombe Tramm", testTranslations: ["Gombe Tramm"], image: "https://i.imgur.com/wEcB95V.png", link: "https://example.com/elephant" },
             { word: "Burger", translation: "Poggen", testTranslations: ["Poggen"], image: "https://i.imgur.com/yaKdxSo.png", link: "https://example.com/lion" },
-            { word: "Vinegar", translation: "Lünsch", testTranslations: ["Lünsch"], image: "https://i.imgur.com/zhfy6CG.png", link: "https://example.com/lion" },
+            { word: "Vinegar", translation: "Lynsch", testTranslations: ["Lynsch"], image: "https://i.imgur.com/zhfy6CG.png", link: "https://example.com/lion" },
             { word: "Soup", translation: "Suppi", testTranslations: ["Suppi"], image: "https://i.imgur.com/lkySN45.png", link: "https://example.com/lion" },	
             { word: "Mustard", translation: "Senef", testTranslations: ["Senef"], image: "https://i.imgur.com/FohmnPI.png", link: "https://example.com/dog" },
             { word: "Chips", translation: "Gipes", testTranslations: ["Gipes"], image: "https://i.imgur.com/4IkZ3wj.png", link: "https://example.com/elephant" },
@@ -455,3 +455,4 @@
     </script>
 </body>
 </html>
+
